--- a/README.adoc
+++ b/README.adoc
@@ -153,6 +153,12 @@ https://www.linkedin.com/company/bjit/[LinkedIn]
 |IOT, Blockchain, Artificial Intelligence, React, Javascript, Python, Node, Django
 |https://www.circlefintech.com/[Website]
 
+|CodersTrust
+|House-82, Road-19/A, Block-E, Banani, Dhaka-1213, Bangladesh
+|Wordpress, PHP, Javascript/Typescript, Python, Scala, Kubernetes, Lambda, AWS
+|https://coderstrust.global/[Website]
+https://www.facebook.com/Coderstrust[Facebook]
+
 |Craftsmen (EU)
 |House 272 (1st Floor), Lane 3 (Eastern Road), DOHS Baridhara, Dhaka 1206, Bangladesh.
 |JavaScript/TypeScript, Node.js, Python, React/Vue.js, Redux, React Native, AWS, Serverless Framework, AI/Machine Learning, GCP, Azure, IBM Watson
