--- a/README.adoc
+++ b/README.adoc
@@ -992,9 +992,9 @@ Road-19/C, New DOHS, Mohakhali, Dhaka-1206
 
 |Software Lighthouse
 |7B, 23/25,Section:12, Pallabi, Mirpur 12, Dhaka,Bangladesh. 01758561131
-|Flutter, Android, iOS, Unity, GoLang, JavaScript, PHP, MySQL, WordPress
-|https://softlh.com[Website]
-|Please update
+|Flutter, Surrealdb, Android, iOS, Unity, Go, JavaScript, PHP, MySQL, WordPress 
+|https://softlh.com[Website] https://www.facebook.com/softlh2020[Facebook]  https://basis.org.bd/company-profile/23-04-021[Basis] https://www.linkedin.com/company/91137876/[linkedin]
+|Team: Software Developer: 6, SQA: 2, PM & HR:2 (Male:Female: 4:6)
 
 |Softzino Technologies
 |House-50, Level-04, Road-03, Sector-11, Uttara, Dhaka-1230
