--- a/README.adoc
+++ b/README.adoc
@@ -277,6 +277,12 @@ https://github.com/ChumbokIT[Github]
 |http://daffodilsoft.com/[Website]
 |Please update
 
+|Danpite.Tech
+|1008/R, Lift-9, Sha Ali Plaza, Mirpur-10, Dhaka-1216
+|PHP, Laravel
+|https://danpite.tech/[Website]
+|Please update
+
 |Databiz Software Limited
 |Mirpur DOHS Avenue 3. Road 12, House 860-861, Dhaka 1216
 |.NET, PHP, Android, iOS
