Fix table columns alignment and update company details

--- a/README.adoc
+++ b/README.adoc
@@ -399,6 +399,7 @@ https://www.linkedin.com/company/dhrubokinfotech/[LinkedIn]
 |Fareast Tower, Level 3, 35 Topkhana Road, Dhaka-1000, Bangladesh
 |Core Banking, Islamic Banking, Micro-finance, ERP, HR & Payroll, AI/ML, IoT, RPA, Web Applications, SQL, Oracle, .NET, Java, Python
 |https://www.erainfotechbd.com/[Website]
+|Please update
 
 |Fieldbuzz (Germany)
 |Azhar Comfort Complex (5th floor), Ga-130/A Progoti Shoroni, Middle Badda, Dhaka
