Updated Singularity Ltd. company info
Updated Singularity Ltd. company info

- Updated Address
- Added Facebook, LinkedIn page links
- Added employee numbers

--- a/README.adoc
+++ b/README.adoc
@@ -1059,10 +1059,12 @@ https://www.linkedin.com/company/selise/[LinkedIn]
 |Please update
 
 |Singularity Limited
-|Level 5, House 147, Lane 1, Baridhara DOHS, Dhaka 1206, Bangladesh
+|138/1, Level 4, Tejgaon I/A, Dhaka 1208, Bangladesh
 |Web and Mobile application, Virtual, Augmented and Mixed Reality, Motion Graphics, Animation, Visual Effects
 |https://singularitybd.com/[Website]
-|Please update
+https://www.linkedin.com/company/singularity-limited/[LinkedIn]
+https://www.facebook.com/singularity.ltd/[Facebook]
+|60+
 
 |SJ Innovation
 |House-281/A (Level-1),
